# fast_cody

./: ..gitignore.un~  .README.md.un~  .gitignore  .gitignore~  .gitmodules  .polyscope.ini  404.html  CMakeLists.txt  LICENSE  README.md  README.md~  create_docs.sh  imgui.ini  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  test.blend  test.blend1  test.py
arap_hessian/: index.html
average_onto_simplex/: index.html
closest_orthogonal_subspace/: index.html
cluster_centroids/: index.html
cluster_grouping_matrices/: index.html
code/: blender_vis_weights_for_each_rig.py  cd_demo_face_tracking.py  interactive_cd_affine_handle.py  interactive_cd_affine_handle_shader.py  msh_to_dmat.py  pose_landmarks_to_positions.py  read_avg_dmat.py  read_timings.py  test_FAST_IK.py  test_FAST_IK_CD_tex.py
complementary_constraint_matrix/: index.html
data/: raptor.msh  tellarite.msh
deformation_jacobian/: index.html
demos/: affine_handle.py  face_tracking.py  rig_anim.py
diffuse_weights/: index.html
docs/: arap_hessian.md  average_onto_simplex.md  closest_orthogonal_subspace.md  cluster_centroids.md  cluster_grouping_matrices.md  complementary_constraint_matrix.md  create_docs.sh  deformation_jacobian.md  diffuse_weights.md  eigs.md  face_landmarks_to_positions.md  fast_cd_sim.md  index.md  laplacian.md  laplacian_eigenmodes.md  lbs_jacobian.md  lbs_weight_space_constraint.md  linear_elasticity_hessian.md  mediapipe_face.md  mediapipe_face_captor.md  momentum_leaking_matrix.md  normalize_height_and_center.md  one_euro_filter.md  orthonormalize.md  project_into_subspace.md  project_out_subspace.md  project_to_orthogonal.md  read_msh.md  read_rig_anim_from_json.md  read_rig_from_json.md  rig_curve_geometry.md  rig_geometry.md  rotate_rig.md  skinning_clusters.md  skinning_subspace.md  umfpack_lu_solve.md  vectorized_trace.md  (+3 more)
(+354 files in other folders)
